# django-rest-framework-emailuser

./: .gitignore  .travis.yml  LICENSE  README.rst  conftest.py  manage.py  migrations_script.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: testing-and-coverage.yml
djangorestframework_emailuser/: settings.py  setup.py  urls.py  wsgi.py
emailuser/: __init__.py  admin.py  forms.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py
src/emailuser/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/emailuser/migrations/: 0001_initial.py
tests/: test_emailuser.py  urls.py
